<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_height="70dp">
        <ImageView
            android:id="@+id/view_opciones"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_menu"/>
        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="260dp"
            android:background="@drawable/pfp_rounded"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/inicioUbicacion"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <View
            android:layout_width="360dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card_format" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            LAYOUT PARA ESTRELLAS-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="20dp"
                    android:layout_marginLeft="35dp">
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_star"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_star"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_star"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_star"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_star"/>
                </LinearLayout>
<!--            LAYOUT PARA EL PRECIO-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="210dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/promedio"/>
                </LinearLayout>

        </LinearLayout>
<!--        LAYOUT DESCRIPCIÓN LUGAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="35dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textoEjemplo"/>
<!--                LAYOUT BOTON DETALLES LUGAR-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_detalles_lugar"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/botonDetalleLugar"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <View
            android:layout_width="360dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card_format" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--            LAYOUT PARA ESTRELLAS-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="20dp"
                android:layout_marginLeft="35dp">
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
            </LinearLayout>
            <!--            LAYOUT PARA EL PRECIO-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_marginLeft="210dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promedio"/>
            </LinearLayout>

        </LinearLayout>
        <!--        LAYOUT DESCRIPCIÓN LUGAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="35dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textoEjemplo"/>
                <!--                LAYOUT BOTON DETALLES LUGAR-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/botonDetalleLugar"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/bottom_nav_margin"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_location" />
        <ImageView
            android:id="@+id/image_view_inicio"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_home" />
        <ImageView
            android:id="@+id/image_view_busqueda"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_search" />
        <ImageView
            android:id="@+id/image_view_social"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_forum" />
    </LinearLayout>

</LinearLayout>